# deep-space-detection

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp  pyproject.toml  vitis.tcl
.cache/clangd/index/: arithmetic_coding.cpp.47CC61248C5534FC.idx  arithmetic_coding.h.5E17D418216E8162.idx  main.cpp.7938530C1B6C3848.idx
docs/: conf.py
docs/resources/: build.md
src/: main.cpp
tests/: main.c
